--- a/frontend/website/src/app/components/camera/camera.component.scss
+++ b/frontend/website/src/app/components/camera/camera.component.scss
@@ -3,13 +3,14 @@ p {
 }
 
 button {
-  margin: 10px;
+  margin: 1%;
 }
 
 .camera-cont {
+  width: 75%;
   text-align:center;
 }
 
 .camera-inactive {
- 
+text-align: center;
 }
