--- a/frontend/website/src/app/components/profile/profile.component.scss
+++ b/frontend/website/src/app/components/profile/profile.component.scss
@@ -1,15 +1,14 @@
 /* Create three equal columns that floats next to each other */
 .column {
   float: left;
-  width: 33.33%;
-  padding: 10px;
-
+  width: 30.0%;
+  display: flex;
 }
 
 /* Clear floats after the columns */
 .row:after {
   content: "";
-  display: table;
+  display: flex;
   clear: both;
 }
 
@@ -20,42 +19,17 @@
   }
 }
 
-#motion {
-  padding-top: 20px;
-}
-
-#storage {
-  padding-top: 20px;
-}
-
 #left {
-  padding-left: 0px;
+  padding-top: 10%;
+  padding-left: 2%;
+}
+
+.card {
+  width: 80%;
+  height: 70%;
   text-align: center;
-}
-
-#right {
-  padding-left: 45px;
-
-}
-
-.button {
-  width:150px;
-  margin-top:2%;
-  margin-bottom:5%;
-  margin-left:5%;
-  margin-right:5%;
-  background-color: #1877F2;
-  color:white;
-  font-family: "Helvetica", sans-serif;
-  font-size:15px;
-  font-weight:bold;
-  border: none;
-  border-radius:5px;
-  height:50px;
 }
 
 #center {
-  text-align: center;
-  padding-right: 25px;
+  padding-left: 7.5%;
 }
-
