--- a/frontend/website/src/app/components/records/records.component.html
+++ b/frontend/website/src/app/components/records/records.component.html
@@ -214,7 +214,7 @@
           <img width="100%;" [src]="currentmx.url"/>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Alright</button>
+          <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Done</button>
         </div>
       </ng-template>
 
