--- a/frontend/website/src/app/components/home/home.component.scss
+++ b/frontend/website/src/app/components/home/home.component.scss
@@ -31,7 +31,7 @@ div {
   background-image: url("../../../assets/shutterstock_611542028.jpg");
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: 100%;
 }
 
 #body {
