--- a/frontend/website/src/app/components/records/records.component.scss
+++ b/frontend/website/src/app/components/records/records.component.scss
@@ -188,3 +188,13 @@ pagination-controls{
 .container3 {
   margin-left: 900px;
 }
+
+.modal-video {
+  width:80%;
+  margin-left:10%;
+  margin-right:10%;
+}
+
+.modal-body {
+
+}
