--- a/frontend/website/src/app/components/shared-media/shared-media.component.html
+++ b/frontend/website/src/app/components/shared-media/shared-media.component.html
@@ -1,5 +1,8 @@
 <div class="card custom-card">
-    <img src="{{category_image}}" class="card-img-top card-cover-img" alt="...">
+  <video class="card-video" controls>
+    <source [src]="mediaURL" type="video/mp4">
+  Your browser does not support the video tag.
+  </video>
     <div class="card-body">
       <div class="row">
         <div class="col">
