--- a/frontend/website/src/app/components/login/login.component.scss
+++ b/frontend/website/src/app/components/login/login.component.scss
@@ -1,64 +1,68 @@
+.login-form {
+  height:230px;
+  margin-top:200px;
+}
+
 .login-input {
-  margin-top:2%;
-  margin-left: 25%;
-  margin-right: 25%;
-  width: 50%
+  margin-top: 2%;
+  margin-left: 30%;
+  margin-right: 30%;
+  width: 40%;
 }
 
 .error-msg {
-  color:red;
-  font-size:24px;
-  font-weight:bold;
+  color: red;
+  font-size: 24px;
+  font-weight: bold;
 }
 
 .login-btn {
-  width:50%;
-  margin-bottom:10%;
+  width: 20%;
+  margin-left: 40%;
+  margin-right: 40%;
   background-color: #1877F2;
-  color:white;
+  color: white;
   font-family: "Helvetica", sans-serif;
-  font-size:20px;
-  font-weight:bold;
+  font-size: 20px;
+  font-weight: bold;
   border: none;
-  border-radius:5px;
-  height:50px;
+  border-radius: 5px;
+  height: 50px;
   text-align: center;
-  margin-left: 25%;
-  margin-right: 25%;
+  margin-top:-30px;
 }
 
 .register-btn {
-  width:30%;
+  width: 20%;
+  margin-right: 40%;
+  margin-left: 40%;
   background-color: #42B72A;
-  color:white;
+  color: white;
   font-family: "Helvetica", sans-serif;
-  font-size:20px;
-  font-weight:bold;
+  font-size: 20px;
+  font-weight: bold;
   border: none;
-  border-radius:5px;
-  height:50px;
+  border-radius: 5px;
+  height: 50px;
   text-align: center;
-  margin-right: 35%;
-  margin-left: 35%;
 }
 
 //700px
 @media (min-width: 43.75em) {
   .login-btn {
-      width:50%;
-      margin-bottom:12%;
-      margin-top:2%;
-      background-color: #1877F2;
-      color:white;
-      font-family: "Helvetica", sans-serif;
-      font-size:20px;
-      font-weight:bold;
-      border: none;
-      border-radius:5px;
-      height:50px;
-      text-align: center;
-      margin-left: 25%;
-      margin-right: 25%;
+    width: 20%;
+    margin-right: 40%;
+    margin-left: 40%;
+    margin-bottom: 12%;
+    background-color: #1877F2;
+    color: white;
+    font-family: "Helvetica", sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+    border: none;
+    border-radius: 5px;
+    height: 50px;
+    text-align: center;
 
   }
 }
@@ -66,72 +70,66 @@
 /* 992px */
 @media (min-width: 62em) {
   .login-input {
-      margin-top:5%;
-    margin-left: 25%;
-    margin-right: 25%;
-    width: 50%
+    margin-left: 30%;
+    margin-right: 30%;
+    width: 40%;
   }
 
   .login-btn {
-      width:50%;
-      margin-bottom:10%;
-      margin-top:10%;
-      background-color: #1877F2;
-      color:white;
-      font-family: "Helvetica", sans-serif;
-      font-size:20px;
-      font-weight:bold;
-      border: none;
-      border-radius:5px;
-      height:50px;
-      text-align: center;
-      margin-left: 25%;
-      margin-right: 25%;
+    width: 20%;
+    margin-bottom: 10%;
+    background-color: #1877F2;
+    color: white;
+    font-family: "Helvetica", sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+    border: none;
+    border-radius: 5px;
+    height: 50px;
+    text-align: center;
+    margin-left: 40%;
+    margin-right: 40%;
 
   }
 
 }
 
-  /* 1392px */
-  @media (min-width: 87em) {
-      .login-input {
-          margin-top:5%;
-        margin-left: 25%;
-        margin-right: 25%;
-        width: 50%
-      }
+/* 1392px */
+@media (min-width: 87em) {
+  .login-input {
+    margin-left: 30%;
+    margin-right: 30%;
+    width: 40%;
+  }
 
-      .login-btn {
-          width:50%;
-          margin-top:5%;
-          background-color: #1877F2;
-          color:white;
-          font-family: "Helvetica", sans-serif;
-          font-size:20px;
-          font-weight:bold;
-          border: none;
-          border-radius:5px;
-          height:50px;
-          text-align: center;
-          margin-left: 25%;
-          margin-right: 25%;
-      }
+  .login-btn {
+    width: 30%;
+    background-color: #1877F2;
+    color: white;
+    font-family: "Helvetica", sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+    border: none;
+    border-radius: 5px;
+    height: 50px;
+    text-align: center;
+    margin-left: 35%;
+    margin-right: 35%;
+  }
 
 
-      .register-btn {
-          width:30%;
-          background-color: #42B72A;
-          color:white;
-          font-family: "Helvetica", sans-serif;
-          font-size:20px;
-          font-weight:bold;
-          border: none;
-          border-radius:5px;
-          height:50px;
-          text-align: center;
-          margin-top:2%;
-          margin-right: 35%;
-          margin-left: 35%;
-      }
-    }
-
+  .register-btn {
+    width: 30%;
+    background-color: #42B72A;
+    color: white;
+    font-family: "Helvetica", sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+    border: none;
+    border-radius: 5px;
+    height: 50px;
+    text-align: center;
+    margin-right: 35%;
+    margin-left: 35%;
+  }
+}
