--- a/frontend/website/src/app/components/register/register.component.html
+++ b/frontend/website/src/app/components/register/register.component.html
@@ -1,36 +1,37 @@
-<form #userData="ngForm" (ngSubmit)="register(userData)" novalidate>
-  <div class="row">
-   <div class="col">
-      <div class="form-group register-lbl">
-          <label class="form-label" for="firstName">First Name</label>
-          <input class="form-control login-input" name="firstName" value="firstName" id="firstName" ngModel required #firstName="ngModel">
-      </div>
-  
-      <div class="form-group register-lbl">
-          <label class="form-label" for="username">Username</label>
-          <input class="form-control login-input" name="username" id="username" ngModel required #username="ngModel">
-      </div>
-   </div>
-  
-      <div class="col">
-         
-          <div class="form-group register-lbl">
-              <label class="form-label" for="lastName">Last Name</label>
-              <input class="form-control login-input" name="lastName" id="lastName" ngModel required #lastName="ngModel">
-          </div>
-      
-          <div class="form-group register-lbl">
-              <label class="form-label" for="password">Password</label>
-              <input class="form-control login-input" name="password" id="password" ngModel required #password="ngModel">
-          </div>
-      </div>
-      <div class="row">
-          <div class="form-group register-lbl">
-              <label class="form-label" for="email">Email Address</label>
-              <input class="form-control login-input" name="email" id="email" ngModel required #email="ngModel">
-          </div>
-      </div>
-  </div>
-  <button class="register-btn">Register</button>
-</form>
-<button class="login-btn" (click)="showLogin()">Login</button>
+<div class="register-cont">
+    <form #userData="ngForm" (ngSubmit)="register(userData)" novalidate>
+        <div class="row form-row">
+         <div class="col">
+            <div class="form-group register-lbl">
+                <label class="form-label" for="firstName">First Name</label>
+                <input class="form-control login-input" name="firstName" value="firstName" id="firstName" ngModel required #firstName="ngModel">
+            </div>
+        
+            <div class="form-group register-lbl">
+                <label class="form-label" for="username">Username</label>
+                <input class="form-control login-input" name="username" id="username" ngModel required #username="ngModel">
+            </div>
+
+            <div class="form-group register-lbl">
+                <label class="form-label" for="email">Email Address</label>
+                <input class="form-control login-input" name="email" id="email" ngModel required #email="ngModel">
+            </div>
+         </div>
+        
+            <div class="col">
+               
+                <div class="form-group register-lbl">
+                    <label class="form-label" for="lastName">Last Name</label>
+                    <input class="form-control login-input" name="lastName" id="lastName" ngModel required #lastName="ngModel">
+                </div>
+            
+                <div class="form-group register-lbl">
+                    <label class="form-label" for="password">Password</label>
+                    <input class="form-control login-input" name="password" id="password" ngModel required #password="ngModel">
+                </div>
+            </div>
+        </div>
+        <button class="register-btn">Register</button>
+      </form>
+      <button class="login-btn" (click)="showLogin()">Login</button>
+</div>
