--- a/frontend/website/src/app/components/profile/profile.component.html
+++ b/frontend/website/src/app/components/profile/profile.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="column" id="left">
-    <div class="card border-primary mb-3">
+    <div class="card-header">
       <h5 class="card-header">Your Account</h5>
       <div class="card-body">
         <h5 class="card-title">{{this.authServ.loggedInUser.firstname}} {{this.authServ.loggedInUser.lastname}}</h5>
