--- a/frontend/website/src/app/components/records/records.component.scss
+++ b/frontend/website/src/app/components/records/records.component.scss
@@ -167,17 +167,27 @@ ngb-timepicker {
     margin: 0px;
   }
 
+  .label-cstm {
+    margin-bottom:20px;
+    padding:20px;
+  }
   .login-input {
-    width: 80%;
+    width: 50%;
+    margin-top:20px;
+    padding:20px;
   }
 
   .dropdown-cont {
     margin: 0px;
   }
 
+  .submit-cont {
+    margin: 0px;
+  }
+
   .dropdown-cstm-toggle {
     margin-left: -4px;
-    margin-top: -10px;
+    margin-top: -20px;
   }
 }
 
