added media population file, slightly improved look of FAQ page...

--- a/frontend/website/src/app/components/faq/faq.component.html
+++ b/frontend/website/src/app/components/faq/faq.component.html
@@ -1,19 +1,30 @@
 <br><br>
+
+<h1>
+
+  <div class="typewriter">
+    <h1>Frequently Asked Questions<img height="50" class="gear" src="https://media2.giphy.com/media/xTiN0IuPQxRqzxodZm/giphy.gif?cid=ecf05e472ti0117xxaedy9vp0w3hbufovc2yp2i44inadfrb&rid=giphy.gif&ct=g"></h1>
+  </div>
+
+  <br>
+  <br>
+</h1>
+
 <div class="font-varies">
-  <p>
+  <p style="font-weight: bold">
     1) Who are we?
   </p>
-  <p>
+  <p style="font-style: oblique">
     We are a startup corporation that provides personal surveillance systems.
   </p>
 </div>
 
 <br><br>
 <div class="font-varies">
-  <p>
+  <p style="font-weight: bold">
     2) How much are our services?
   </p>
-  <p>
+  <p style="font-style: oblique">
     We have multiple service options starting at $9.99/Month/Camera. With each additional camera, there is a 5% discount
     (Max 20%).
   </p>
@@ -21,10 +32,10 @@
 
 <br><br>
 <div class="font-varies">
-  <p>
+  <p style="font-weight: bold">
     3) Do we ever offer promotions?
   </p>
-  <p>
+  <p style="font-style: oblique">
     We never offer promotions in order to prevent new customer from thinking they will lose out if they do not wait. Our
     prices are fixed.
   </p>
@@ -32,117 +43,117 @@
 
 <br><br>
 <div class="font-varies">
-  <p>
+  <p style="font-weight: bold">
     4) Where are our servers located?
   </p>
-  <p>
+  <p style="font-style: oblique">
     Our servers are located in Illinois, USA.
   </p>
 </div>
 
 <br><br>
 <div class="font-varies">
-  <p>
+  <p style="font-weight: bold">
     5) What is love?
   </p>
-  <p>
+  <p style="font-style: oblique">
     Baby don't hurt me, don't hurt me.
   </p>
 </div>
 
 <br><br>
 <div class="font-varies">
-  <p>
+  <p style="font-weight: bold">
     6) How many cameras can I use with your service?
   </p>
-  <p>
+  <p style="font-style: oblique">
     Our current limit is 10 cameras per account.
   </p>
 </div>
 
 <br><br>
 <div class="font-varies">
-  <p>
+  <p style="font-weight: bold">
     7) How do I create an account?
   </p>
-  <p>
+  <p style="font-style: oblique">
     You can create an account by clicking on the Sign-Up button on the top right.
   </p>
 </div>
 
 <br><br>
 <div class="font-varies">
-  <p>
+  <p style="font-weight: bold">
     8) Can I change the quality of picture/video?
   </p>
-  <p>
+  <p style="font-style: oblique">
     Yes you can. We offer 360 px, 480 px, 720 px, and 1080 px.
   </p>
 </div>
 
 <br><br>
 <div class="font-varies">
-  <p>
+  <p style="font-weight: bold">
     9) What is the maximum length of video I can record?
   </p>
-  <p>
+  <p style="font-style: oblique">
     You can record upto 30 seconds of video.
   </p>
 </div>
 
 <br><br>
 <div class="font-varies">
-  <p>
+  <p style="font-weight: bold">
     10) Can your service detect motion?
   </p>
-  <p>
+  <p style="font-style: oblique">
     Yes, we can detect motion upto a distance of 10 meters from the camera.
   </p>
 </div>
 
 <br><br>
 <div class="font-varies">
-  <p>
+  <p style="font-weight: bold">
     11) What guarantees do you offer?
   </p>
-  <p>
+  <p style="font-style: oblique">
     If you are not satisfied with our service, you can get a full refund within the first 30 days.
   </p>
 </div>
 
 <br><br>
 <div class="font-varies">
-  <p>
+  <p style="font-weight: bold">
     12) What does the fox say?
   </p>
-  <p>
+  <p style="font-style: oblique">
     Ring-ding-ding-ding-dingeringeding!</p>
 </div>
 
 <br><br>
 <div class="font-varies">
-  <p>
+  <p style="font-weight: bold">
     13) Can we schedule recording?
   </p>
-  <p>
+  <p style="font-style: oblique">
     We are still working on that feature. We will update you soon!</p>
 </div>
 
 <br><br>
 <div class="font-varies">
-  <p>
+  <p style="font-weight: bold">
     14) Will there be a mobile app?
   </p>
-  <p>
+  <p style="font-style: oblique">
     We are seriously considering this, but it is on the back-burner for now!</p>
 </div>
 
 <br><br>
 <div class="font-varies">
-  <p>
+  <p style="font-weight: bold">
     15) How long do you store the images and videos for?
   </p>
-  <p>
+  <p style="font-style: oblique">
     Images are stored for 30 days and video are stored for 24 hours.</p>
 </div>
 
@@ -154,18 +165,18 @@
   <form #feedbackData="ngForm" (ngSubmit)="create(feedbackData)" novalidate class="form">
     <div class="col">
       <div class="form-group">
-        <label class="form-label" class="font-varies" for="name">Name</label>
+        <label style="font-weight: bold" class="form-label" class="font-varies" for="name">Name</label>
         <input class="form-control" style="width: 400px; margin: 0 auto" name="name" id="name" ngModel required
                #name="ngModel">
       </div>
       <div class="form-group">
-        <label class="form-label" class="font-varies" for="email" >E-Mail</label>
+        <label style="font-weight: bold" class="form-label" class="font-varies" for="email" >E-Mail</label>
         <input class="form-control" style="width: 400px; margin: 0 auto" name="email" id="email" ngModel required
                #email="ngModel">
       </div>
     </div>
     <div class="col">
-      <label class="form-label" class="font-varies" for="question" >Question</label>
+      <label style="font-weight: bold" class="form-label" class="font-varies" for="question" >Question</label>
     </div>
 
     <!--          <input class="form-control" style="width: 500px; margin: 0 auto; height: 300px" name="question" id="question" ngModel required #question="ngModel">-->
