--- a/frontend/website/src/app/components/faq/faq.component.scss
+++ b/frontend/website/src/app/components/faq/faq.component.scss
@@ -46,3 +46,25 @@ label {
   font-size: 1em;
 }
 
+.typewriter h1 {
+  overflow: hidden; /* Ensures the content is not revealed until the animation */
+  border-right: .15em solid orange; /* The typwriter cursor */
+  white-space: nowrap; /* Keeps the content on a single line */
+  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+  letter-spacing: .15em; /* Adjust as needed */
+  animation: typing 3.5s steps(40, end),
+  blink-caret .75s step-end infinite;
+  display: inline-block;
+  font-size: 100%;
+  font-weight: bold;
+}
+
+.typewriter {
+  text-align: left;
+  padding-left:30px;
+}
+
+.gear {
+  width: 5%;
+  height: auto;
+}
