--- a/frontend/website/src/app/components/my-devices/my-devices.component.scss
+++ b/frontend/website/src/app/components/my-devices/my-devices.component.scss
@@ -23,9 +23,10 @@
 
 .devices-container {
     text-align: center;
-    position: absolute;
+    position: fixed;
     bottom: 10px;
     right: 10px;
+    float:right;
 }
 
 .red-icon {
