dark mode homepage fix

--- a/frontend/website/src/app/components/home/home.component.html
+++ b/frontend/website/src/app/components/home/home.component.html
@@ -26,7 +26,7 @@
       We always deliver the best!
     </p>
     <hr>
-    <ul class="list-inline mt-3 mb-0">
+    <ul class="list-inline mt-3 mb-0" style="color: #050505;">
       <a>
         <mat-icon>location_on</mat-icon>
         1234 Garage Rd, Basement City, IL 56789</a>
